--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@swimlane/ngx-charts": "^14.0.0",
     "angular-crumbs": "^3.0.1",
     "bootstrap": "^4.4.0",
+    "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
